fix attributed_lark update and dependencies

--- a/docs/contextual_terminal.ipynb
+++ b/docs/contextual_terminal.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "43ebc97a-de5e-4245-b420-9cd1bf20ac3f",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "8b4ef92b-9ed2-4ca1-adbc-c793bc865fe0",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
        "{Token('NUMBER', '(.*?)'), Token('CNAME', 'x$|y$|w$')}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "8b777024-f0b6-415e-add8-44a79286d238",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
        "{Token('NUMBER', '(.*?)'), Token('CNAME', 'x$|y$|z$')}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "f2fc18fd-0266-490c-9a04-57a3c0c9b549",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        "{Token('CNAME', '(?!(w$|v$|z$))')}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,9 +226,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "notebook",
+   "display_name": "guiding-typed-lang",
    "language": "python",
-   "name": "notebook"
+   "name": "guiding-typed-lang"
   },
   "language_info": {
    "codemirror_mode": {
