--- a/docs/synthesized_attributes.ipynb
+++ b/docs/synthesized_attributes.ipynb
@@ -59,8 +59,11 @@
     "\"\"\"\n",
     "\n",
     "parser = Lark(synthesized_arith_grammar, parser=\"lalr\")\n",
-    "_, res = parser.parse(\"5 * 3 -7\")\n",
-    "res"
+    "interactive_parser = parser.parse_interactive(start=\"start\")\n",
+    "for t in parser.lex(\"5 * 3 - 7\"):\n",
+    "    interactive_parser.feed_token(t)\n",
+    "interactive_parser.feed_eof()\n",
+    "interactive_parser.parser_state.attribute"
    ]
   },
   {
@@ -112,9 +115,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "notebook",
+   "display_name": "guiding-typed-lang",
    "language": "python",
-   "name": "notebook"
+   "name": "guiding-typed-lang"
   },
   "language_info": {
    "codemirror_mode": {
