--- a/docs/typed_calculus.ipynb
+++ b/docs/typed_calculus.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "2dc94910-b484-490b-8a20-ff6c67fb208f",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "0f42b4e6-49b8-41fb-b158-f19140ea8004",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "9f2800f2-a8f3-4a68-839a-234fafd2084e",
    "metadata": {},
    "outputs": [],
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "b74880da-0740-4e51-b9b7-5955292aaf49",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
     "terms = [r\"(\\ x y z -> (z ((,) x y)))\", r\"(\\ n m f x -> (n (m f) x))\"]\n",
     "head_prompt = rf\"\"\"Write terms in Haskell using only \\ , ->, (,), fst, snd and applications, but write applications in postfix notation.\n",
     "For instance:\"\"\"\n",
-    "postfix_example = lambda t: rf\"Instead of {t} you should write {(PrefixToPostfix()*PostfixToTxt()).transform(prefix_parser.parse(t)[0])}\"\n",
+    "postfix_example = lambda t: rf\"Instead of {t} you should write {(PrefixToPostfix()*PostfixToTxt()).transform(prefix_parser.parse(t))}\"\n",
     "\n",
     "tail_prompt = \"Write a term applying 6 times its first argument to its second argument:\"\n",
     "prompt = \"\\n\".join([head_prompt, *[postfix_example(t) for t in terms], tail_prompt])\n",
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "19b62a9f-9da6-4dbd-a7ae-0b41237544c8",
    "metadata": {
     "tags": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "7c662c50-361d-4602-9b73-6957937ec558",
    "metadata": {},
    "outputs": [
@@ -378,13 +378,13 @@
     "postfix_term = generator(prompt)\n",
     "\n",
     "print(\"Generated term:\\n\\t\", postfix_term)\n",
-    "prefix_term = (PostfixToPrefix()*PrefixToTxt()).transform(postfix_parser.parse(postfix_term)[0])\n",
+    "prefix_term = (PostfixToPrefix()*PrefixToTxt()).transform(postfix_parser.parse(postfix_term))\n",
     "print(\"Generated term in prefix form:\\n\\t\", prefix_term)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "7f6d3112-4789-4d89-9699-24889d508f32",
    "metadata": {},
    "outputs": [
@@ -405,9 +405,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "notebook",
+   "display_name": "guiding-typed-lang",
    "language": "python",
-   "name": "notebook"
+   "name": "guiding-typed-lang"
   },
   "language_info": {
    "codemirror_mode": {
