--- a/docs/inherited_attributes.ipynb
+++ b/docs/inherited_attributes.ipynb
@@ -84,8 +84,11 @@
     "\"\"\"\n",
     "\n",
     "parser = Lark(inherited_arith_grammar, parser=\"lalr\")\n",
-    "_, res = parser.parse(\"let x = 5, y = 10 in 5 + x + -y\")\n",
-    "res"
+    "interactive_parser = parser.parse_interactive(start=\"start\")\n",
+    "for t in parser.lex(\"let x = 5, y = 10 in 5 + x + -y\"):\n",
+    "    interactive_parser.feed_token(t)\n",
+    "interactive_parser.feed_eof()\n",
+    "interactive_parser.parser_state.attribute"
    ]
   },
   {
@@ -217,16 +220,19 @@
     "\"\"\"\n",
     "\n",
     "parser = Lark(global_arith_grammar, parser=\"lalr\")\n",
-    "_, res = parser.parse(\"let x = 5, y = 10 in 5 * x + y\")\n",
-    "res"
+    "interactive_parser = parser.parse_interactive(start=\"start\")\n",
+    "for t in parser.lex(\"let x = 5, y = 10 in 5 * x + y\"):\n",
+    "    interactive_parser.feed_token(t)\n",
+    "interactive_parser.feed_eof()\n",
+    "interactive_parser.parser_state.attribute"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "notebook",
+   "display_name": "guiding-typed-lang",
    "language": "python",
-   "name": "notebook"
+   "name": "guiding-typed-lang"
   },
   "language_info": {
    "codemirror_mode": {
