update notebooks to attribute_lark

--- a/docs/contextual_terminal.ipynb
+++ b/docs/contextual_terminal.ipynb
@@ -33,12 +33,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "43ebc97a-de5e-4245-b420-9cd1bf20ac3f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lark import Lark\n",
+    "from attribute_lark import AttributeLark\n",
     "\n",
     "nested_vars_grammar = \"\"\"\n",
     "%import common.NUMBER\n",
@@ -85,10 +85,10 @@
     "| \",\" args\n",
     "\n",
     "atom: NUMBER\n",
-    "| CNAME{{ '|'.join([k + '$' for k,v in GLOBAL.ctx.items() if v > 0]) }}\n",
+    "| CNAME{{ '|'.join([k for k,v in GLOBAL.ctx.items() if v > 0]) }}\n",
     "\n",
     "\"\"\"\n",
-    "parser = Lark(nested_vars_grammar, parser=\"lalr\")"
+    "parser = AttributeLark(nested_vars_grammar)"
    ]
   },
   {
@@ -105,77 +105,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "8b4ef92b-9ed2-4ca1-adbc-c793bc865fe0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{Token('NUMBER', '(.*?)'), Token('CNAME', 'x$|y$|w$')}"
+       "[('NUMBER', None), ('CNAME', 'x|y|w')]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def next_token(expr, parser):\n",
-    "    interactive_parser = parser.parse_interactive(start=\"start\")\n",
-    "    for t in parser.lex(expr):\n",
-    "        interactive_parser.feed_token(t)\n",
-    "    return interactive_parser.accepts()\n",
+    "    parser_state = parser.parse_interactive(expr, start=\"start\")\n",
+    "    for state in parser_state:\n",
+    "        for name in state.lexer_state.dict_states:\n",
+    "            if name != \"WS\":\n",
+    "                yield name, state.lookahead_shifts[name].pattern\n",
     "\n",
-    "next_token(\"\"\"\n",
-    "        let x, y in { some_expr(x,y); let w in { some_expr(\n",
-    "\"\"\", parser)"
+    "expr = \"let x, y in { some_expr(x,y); let w in { some_expr(\"\n",
+    "list(next_token(expr, parser))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "8b777024-f0b6-415e-add8-44a79286d238",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{Token('NUMBER', '(.*?)'), Token('CNAME', 'x$|y$|z$')}"
+       "[('NUMBER', None), ('CNAME', 'x|y|z')]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "next_token(\"\"\"\n",
-    "        let x, y in { some_expr(x,y); let w in { some_expr(w) }; let y,z in { some_expr(\n",
-    "\"\"\", parser)"
+    "expr = \"let x, y in { some_expr(x,y); let w in { some_expr(w) }; let y,z in { some_expr(\"\n",
+    "list(next_token(expr, parser))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "f2fc18fd-0266-490c-9a04-57a3c0c9b549",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{Token('CNAME', '(?!(w$|v$|z$))')}"
+       "[('CNAME', '(?!(w$|v$|z$))')]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "next_token(\"\"\"\n",
-    "        let x, y in { some_expr(x,y); let y,z in { some_expr(13) }; let z, v, w,\n",
-    "\"\"\", parser)"
+    "expr = \"let x, y in { some_expr(x,y); let y,z in { some_expr(13) }; let z, v, w,\"\n",
+    "list(next_token(expr, parser))"
    ]
   },
   {
@@ -240,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
