--- a/docs/inherited_attributes.ipynb
+++ b/docs/inherited_attributes.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "9fc7dbf6-bb3e-4b0f-8c81-794d42d6ccb1",
    "metadata": {},
    "outputs": [
@@ -45,13 +45,13 @@
        "0"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from lark import Lark\n",
+    "from attribute_lark import AttributeLark\n",
     "\n",
     "inherited_arith_grammar = \"\"\"\n",
     "%import common.NUMBER\n",
@@ -83,12 +83,9 @@
     "| \"-\" atom{{ inh }}           {{ Ctx(inh.ctx, -syn[2].value) }}\n",
     "\"\"\"\n",
     "\n",
-    "parser = Lark(inherited_arith_grammar, parser=\"lalr\")\n",
-    "interactive_parser = parser.parse_interactive(start=\"start\")\n",
-    "for t in parser.lex(\"let x = 5, y = 10 in 5 + x + -y\"):\n",
-    "    interactive_parser.feed_token(t)\n",
-    "interactive_parser.feed_eof()\n",
-    "interactive_parser.parser_state.attribute"
+    "parser = AttributeLark(inherited_arith_grammar)\n",
+    "parse_tree, attribute = parser.parse(\"let x = 5, y = 10 in 5 + x + -y\", start=\"start\")\n",
+    "attribute"
    ]
   },
   {
@@ -106,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "6bb0aec9-1399-479e-9639-bd92f205e56c",
    "metadata": {},
    "outputs": [
@@ -122,7 +119,7 @@
    ],
    "source": [
     "import ast\n",
-    "from lark.grammar import Terminal\n",
+    "from attribute_lark.grammar import Terminal\n",
     "rules = parser.rules[3:6]\n",
     "for r in rules:\n",
     "    print(f\"{r.origin.name} : {[t.name if isinstance(t, Terminal) else t.name.value for t in r.expansion]},\\t{{{{ {ast.unparse(r.ast)} }}}}\")"
@@ -165,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "9adafbd0-2ef9-4c58-a0a8-7544f1ee295f",
    "metadata": {},
    "outputs": [
@@ -175,7 +172,7 @@
        "35"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,12 +216,9 @@
     "| \"(\" sum \")\"         {{ syn[2] }}\n",
     "\"\"\"\n",
     "\n",
-    "parser = Lark(global_arith_grammar, parser=\"lalr\")\n",
-    "interactive_parser = parser.parse_interactive(start=\"start\")\n",
-    "for t in parser.lex(\"let x = 5, y = 10 in 5 * x + y\"):\n",
-    "    interactive_parser.feed_token(t)\n",
-    "interactive_parser.feed_eof()\n",
-    "interactive_parser.parser_state.attribute"
+    "parser = AttributeLark(global_arith_grammar)\n",
+    "parse_tree, attribute = parser.parse(\"let x = 5, y = 10 in 5 * x + y\", start=\"start\")\n",
+    "attribute"
    ]
   }
  ],
@@ -244,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
