--- a/docs/synthesized_attributes.ipynb
+++ b/docs/synthesized_attributes.ipynb
@@ -36,7 +36,7 @@
     }
    ],
    "source": [
-    "from lark import Lark\n",
+    "from attribute_lark import AttributeLark\n",
     "\n",
     "synthesized_arith_grammar = \"\"\"\n",
     "%import common.NUMBER\n",
@@ -58,12 +58,9 @@
     "| \"(\" sum \")\"         {{syn[2]}}\n",
     "\"\"\"\n",
     "\n",
-    "parser = Lark(synthesized_arith_grammar, parser=\"lalr\")\n",
-    "interactive_parser = parser.parse_interactive(start=\"start\")\n",
-    "for t in parser.lex(\"5 * 3 - 7\"):\n",
-    "    interactive_parser.feed_token(t)\n",
-    "interactive_parser.feed_eof()\n",
-    "interactive_parser.parser_state.attribute"
+    "parser = AttributeLark(synthesized_arith_grammar)\n",
+    "parse_tree, attribute = parser.parse(\"5 * 3 - 7\")\n",
+    "attribute"
    ]
   },
   {
@@ -129,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
