--- a/docs/typed_calculus.ipynb
+++ b/docs/typed_calculus.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "2dc94910-b484-490b-8a20-ff6c67fb208f",
    "metadata": {},
    "outputs": [
@@ -85,12 +85,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "0f42b4e6-49b8-41fb-b158-f19140ea8004",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lark import Lark\n",
+    "from attribute_lark import AttributeLark\n",
     "\n",
     "typed_lambda_grammar = \"\"\"\n",
     "%import common.CNAME\n",
@@ -130,7 +130,7 @@
     "SND: \"snd\"\n",
     "\"\"\"\n",
     "\n",
-    "prefix_parser = Lark(typed_lambda_grammar, parser=\"lalr\")"
+    "prefix_parser = AttributeLark(typed_lambda_grammar)"
    ]
   },
   {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "9f2800f2-a8f3-4a68-839a-234fafd2084e",
    "metadata": {},
    "outputs": [],
@@ -169,7 +169,7 @@
     "_start: lambda                {{ syn[1] }}\n",
     "| app                         {{ syn[1] }}\n",
     "\n",
-    "app: term term APP{{ \"App$\" if ctx_is_applicable(syn[1], syn[2], GLOBAL) else \"\" }}     {{ ctx_app(syn[1], syn[2], GLOBAL) }}    -> app\n",
+    "app: term term APP{{ \"App\" if ctx_is_applicable(syn[1], syn[2], GLOBAL) else \"\" }}     {{ ctx_app(syn[1], syn[2], GLOBAL) }}    -> app\n",
     "| term term PAIR                                                                        {{ ctx_pair(syn[1], syn[2], GLOBAL) }}   -> pair\n",
     "| term                                                                                  {{ syn[1] }}                             -> term\n",
     "\n",
@@ -195,7 +195,7 @@
     "APP: \"App\"\n",
     "\"\"\"\n",
     "\n",
-    "postfix_parser = Lark(postfix_lambda_grammar, parser=\"lalr\")"
+    "postfix_parser = AttributeLark(postfix_lambda_grammar)"
    ]
   },
   {
@@ -215,14 +215,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "019a9edb-7bd6-44a2-b020-cf1bb9c61c3b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lark.visitors import Transformer\n",
-    "from lark.tree import Tree\n",
-    "from lark.lexer import Token\n",
+    "from attribute_lark.visitors import Transformer\n",
+    "from attribute_lark.tree import Tree\n",
+    "from attribute_lark.lexer import Token\n",
     "\n",
     "class PrefixToPostfix(Transformer):\n",
     "    def app(self, children):\n",
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "b74880da-0740-4e51-b9b7-5955292aaf49",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
     "terms = [r\"(\\ x y z -> (z ((,) x y)))\", r\"(\\ n m f x -> (n (m f) x))\"]\n",
     "head_prompt = rf\"\"\"Write terms in Haskell using only \\ , ->, (,), fst, snd and applications, but write applications in postfix notation.\n",
     "For instance:\"\"\"\n",
-    "postfix_example = lambda t: rf\"Instead of {t} you should write {(PrefixToPostfix()*PostfixToTxt()).transform(prefix_parser.parse(t))}\"\n",
+    "postfix_example = lambda t: rf\"Instead of {t} you should write {(PrefixToPostfix()*PostfixToTxt()).transform(prefix_parser.parse(t)[0])}\"\n",
     "\n",
     "tail_prompt = \"Write a term applying 6 times its first argument to its second argument:\"\n",
     "prompt = \"\\n\".join([head_prompt, *[postfix_example(t) for t in terms], tail_prompt])\n",
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "19b62a9f-9da6-4dbd-a7ae-0b41237544c8",
    "metadata": {
     "tags": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "7c662c50-361d-4602-9b73-6957937ec558",
    "metadata": {},
    "outputs": [
@@ -378,13 +378,13 @@
     "postfix_term = generator(prompt)\n",
     "\n",
     "print(\"Generated term:\\n\\t\", postfix_term)\n",
-    "prefix_term = (PostfixToPrefix()*PrefixToTxt()).transform(postfix_parser.parse(postfix_term))\n",
+    "prefix_term = (PostfixToPrefix()*PrefixToTxt()).transform(postfix_parser.parse(postfix_term)[0])\n",
     "print(\"Generated term in prefix form:\\n\\t\", prefix_term)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "7f6d3112-4789-4d89-9699-24889d508f32",
    "metadata": {},
    "outputs": [
@@ -419,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
